# cluster-build

./: .gitignore  BUILD.bazel  WORKSPACE
cmd/standalone/: BUILD.bazel  main.go
operation/: BUILD.bazel  operation.go
server/: BUILD.bazel  cloudbuild.go  operations.go
