
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server_go",
    srcs = [
        "cloudbuild.go",
        "operations.go",
    ],
    importpath = "github.com/abergmeier/cluster-build/server",
    deps = [
        "@org_golang_google_api//cloudbuild/v1:go_default_library",
        "@org_golang_google_genproto//googleapis/devtools/cloudbuild/v1:go_default_library",
        "//:cloudbuild_go_grpc",
        "@org_golang_google_genproto//googleapis/longrunning:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "//build:build_go",
        "//operation:operation_go",
    ],
    visibility = ["//visibility:public"],
)
